--- a/_posts/2022-09-14-aeap.md
+++ b/_posts/2022-09-14-aeap.md
@@ -6,7 +6,7 @@ image: ../assets/blog/2022-07-aeap-0.png
 
 The Delta Chat 1.32 releases introduced support for new providers (most notably 163.com), a bigger internal "move to Tokio" infrastructure change resulting in better speed, and the first release of AEAP mechanisms. AEAP enables for e-mail what number porting does for mobile phone communications, i.e. to more easily change between communication providers.
 
-TLDR; How to migrate to a new provider with Delta Chat:
+TL;DR - How to migrate to a new provider with Delta Chat:
 
 - Probe and change your address at "Password and Account" seetings screen in Delta Chat
 - Make your old email provider forward all emails to your new email address
