removed Tokio/163.com mentioning, it doesn't really fit into this blog post

--- a/_posts/2022-09-14-aeap.md
+++ b/_posts/2022-09-14-aeap.md
@@ -4,7 +4,7 @@ author: hocuri, holga
 image: ../assets/blog/2022-07-aeap-0.png
 ---
 
-The Delta Chat 1.32 releases introduced support for new providers (most notably 163.com), a bigger internal "move to Tokio" infrastructure change resulting in better speed, and the first release of AEAP mechanisms. AEAP enables for e-mail what number porting does for mobile phone communications, i.e. to more easily change between communication providers.
+The Delta Chat 1.32 releases introduced the first release of AEAP mechanisms. They enable for e-mail what number porting does for mobile phone communications, i.e. to more easily change between communication providers.
 
 TL;DR - How to migrate to a new provider with Delta Chat:
 
@@ -40,11 +40,6 @@ In subsequent releases we hope to make the e-mail address rewriting also happen 
 We are generally colloborating with maintainers of [mailcow](https://mailcow.email), a popular docker-based distribution for self-hosted e-mail.  We might add a way to register "e-mail forwarding" so that moving from a mailcow-server instance to another provider would be seemless and would not require the manual provider-specific step of "setup forwarding of mails to your new address". We would be down to "change your e-mail adddress" and incrementally all (chat) e-mails will flow to your new provider.
 
 After gathering more experience, we may also suggest additions to the [Autocrypt encryption standard](https://autocrypt.org) such that account-migration could be more safely implemented by e-mail apps other than Delta Chat.
-
-
-## Implementation notes: moving to "Tokio" and getting faster
-
-The inner part of any Delta Chat app or Bot is the "core" library. [In Kyiv around May 2019 we started migrating this library to use the "Rust" programming language](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse).  Later on we migrated to so called "async" Rust, the state of the art way of dealing with concurrent networking and messaging tasks.  Rust has two major approaches, one goes under the term "async-std" and the other under "Tokio". The latter has found a lot more adoption in the last years and we now also moved our code base to Tokio. As a nice side effect, many users reported speed improvements :)
 
 ## Special thanks to NLNET and their Next-Generation-Internet work
 
