some more streamlining of first para, now that mentiions of tokio/163 are gone

--- a/_posts/2022-09-14-aeap.md
+++ b/_posts/2022-09-14-aeap.md
@@ -4,7 +4,7 @@ author: hocuri, holga
 image: ../assets/blog/2022-07-aeap-0.png
 ---
 
-The Delta Chat 1.32 releases introduced the first release of AEAP mechanisms. They enable for e-mail what number porting does for mobile phone communications, i.e. to more easily change between communication providers.
+The Delta Chat 1.32 releases introduced e-mail porting mechanisms (AEAP). They enable for e-mail what number porting does for mobile phone communications, i.e. to more easily change between communication providers.
 
 TL;DR - How to migrate to a new provider with Delta Chat:
 
@@ -17,7 +17,7 @@ TL;DR - How to migrate to a new provider with Delta Chat:
 
 ### How it works under the hood
 
-Nothing immediately happens after you successfully changed to your new e-mail address in the settings screen.  No network activity or sending of messages is taking place. Your internal identification and encryption keys stay the same and are not altered[^1]. Your contacts don't know yet that you changed your address yet and will continue to send messages to your old address. For this reason, you better **configure your old email provider so that it forwards all emails** to your new email address. Otherwise messages sent to your old address won't arrive because Delta Chat does not try to retrieve messages from there after the change. If you don't know how to setup e-mail forwarding for your old provider please ask on the [Support Forum](https://support.delta.chat).
+Nothing immediately happens after you successfully changed to your new e-mail address in the settings screen. No network activity or sending of messages is taking place. Your internal identification and encryption keys stay the same and are not altered[^1]. Your contacts don't know yet that you changed your address yet and will continue to send messages to your old address. For this reason, you better **configure your old email provider so that it forwards all emails** to your new email address. Otherwise messages sent to your old address won't arrive because Delta Chat does not try to retrieve messages from there after the change. If you don't know how to setup e-mail forwarding for your old provider please ask on the [Support Forum](https://support.delta.chat).
 
 If you send a message to any chat, the other chat members will not complain
 if they see it coming from your new e-mail address.
