--- a/_posts/2022-09-14-aeap.md
+++ b/_posts/2022-09-14-aeap.md
@@ -43,4 +43,4 @@ After gathering more experience, we may also suggest additions to the [Autocrypt
 
 ## Special thanks to NLNET and their Next-Generation-Internet work
 
-The work on AEAP is already ongoing for well over a year (on and off) and has been funded through the [NLNET foundation](https://nlnet.nl/project/EmailPorting/), in turn funded by the European Commission. We particularly like to thank Michiel, Jost and the rest of the NLNET NGI team for smooth handling of advising, reporting and financing.
+The work on AEAP is already ongoing for well over a year (on and off) and has been funded through the [NLNET foundation](https://nlnet.nl/project/EmailPorting/), in turn funded by the European Commission. We particularly like to thank Michiel, Jos and the rest of the NLNET NGI team for smooth handling of advising, reporting and financing.
