--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -1,7 +1,7 @@
 ---
 title: Want to earn money improving Delta Chat UI/UX?
 author: olgax
-image: ../assets/blog/2022-07-aeap-0.png
+image: ../assets/blog/2022-12-uidevs.jpg
 ---
 
 What do indigenous communities in the Amazon rainforest, friends in Cuba, families in Iran, activists from Russia, a monastery in Cambodia, and many folks in the Fediverse have in common?
