added more images

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -21,6 +21,8 @@ They're using Delta Chat because it is:
 - **interoperable**: Anyone can chat even if the recipient doesn't have the app —
   it works with any e-mail address.
 
+![A variety of Delta Chat logos.](../assets/blog/2022-12-uidevs.jpg)
+
 ### Why don't we promote our project more?
 
 Since the beginnings of Delta Chat in a small city north of Hamburg almost five years ago,
@@ -31,6 +33,7 @@ Avoiding popularity is not merely born out of humility, but also realism as
 we can only address so much feedback and suggestions.
 If we are over capacity, feature requests and ideas turn into pressure and stress.
 
+<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-bottom:1em;" />
 Luckily we have a wonderful testing community with key contributors
 sorting out issues with users and discussing with developers.
 One from Austria kept reminding us about specific connectivity problems
@@ -92,6 +95,8 @@ quickly bootstraps a working account configured with Dela Chat.
 The latest addition to our group of sysadmins has seup a new server and
 onboarded a couple of friends, now all happily using Delta Chat.
 
+![Some Delta Chat testers sitting on the ground](../assets/blog/2022-12-ux-studies.jpg)
+
 We have two concurrent efforts to provide what we call Automatic Accounts:
 Any Delta Chat user on any platform could choose to get a single-click account
 with an optimized baseline chat experience.
@@ -134,6 +139,9 @@ our Desktop app introduces JSON-RPC (JSON Remote-Procedure-Calls),
 directly talking to core without a C-layer.
 New asynchronous python bindings doing away with all CFFI were started this week
 with first bots being ported to it.
+
+![A delta mascot sitting below a Delta Chat umbrella, protecting it against
+Apple & Google rain.](../assets/blog/2022-12-gafam-rain.jpg)
 
 ### Bots, bots, bots
 
