css: fixing margin

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -33,7 +33,7 @@ Avoiding popularity is not merely born out of humility, but also realism as
 we can only address so much feedback and suggestions.
 If we are over capacity, feature requests and ideas turn into pressure and stress.
 
-<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-bottom:1em;" />
+<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin:1em;" />
 Luckily we have a wonderful testing community with key contributors
 sorting out issues with users and discussing with developers.
 One from Austria kept reminding us about specific connectivity problems
@@ -45,7 +45,7 @@ a friendly fork of Delta Chat Android only available in the Cuban app store.
 
 ### Extending decentralized chat with web apps
 
-<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin-bottom:1em;" />
+<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin:1em;" />
 [Apps shared in a Chat](https://webxdc.org) were released in mid-2022.
 Dozens of grassroots-ported games are played daily in chat groups and through mailing lists.
 Collaborative tooling apps (polls, checklists, calendars, editors) are evolving.
