--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -44,7 +44,7 @@ a friendly fork of Delta Chat Android only available in the Cuban app store.
 
 ### Extending decentralized chat with web apps
 
-<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin:1em;" />
+<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin-right:1em;" />
 [Apps shared in a Chat](https://webxdc.org) were released in mid-2022.
 Dozens of grassroots-ported games are played daily in chat groups and through mailing lists.
 Collaborative tooling apps (polls, checklists, calendars, editors) are evolving.
