fixed image margin

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -70,7 +70,7 @@ features from other messengers (emoji reactions, broadcast channels, folding mul
 groups into communities), and even Peer-to-Peer messaging.
 We progressing on several of these topics and, although we pre-announce as little as possible, this post will be an exception (to prove the rule 🙂).
 
-<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin:1em;" />
+<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-left:1em;" />
 Delta Chat app developments are a usability and UX-driven effort and
 for this we have experienced UX researchers with us.
 Security considerations play a day-to-day role, however, the "most secure protocol"
