--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -1,5 +1,5 @@
 ---
-title: Want to earn money improving Delta Chat UI/UX?
+title: Want to get money to help improving Delta Chat UI/UX?
 author: olgax
 image: ../assets/blog/2022-12-uidevs.jpg
 ---
@@ -8,18 +8,19 @@ What do indigenous communities in the Amazon rainforest, friends in Cuba, famili
 
 They're using Delta Chat because it is:
 
-- **adaptable**: Indigenous communities use solar powered routers deep in the rainforest,
+- **adaptable**: [Indigenous](https://rhizomatica.org) communities
+  use solar powered routers deep in the rainforest,
   facilitating fast local Wi-Fi chats and
-  low-bitrate High-Frequency antenna long-range communication with remote chat addresses.
+  low-bitrate long-range communication with remote chat addresses.
 
 - **resilient**: Internationally dispersed families and friends stay in contact,
   even when WhatsApp, Signal, VPNs, and Tor fail.
 
-- **sovereign**: Members of a monastery (ethically barred from using "remote" accounts)
-  run their own e-mail server with a chat-messenger that they accept as a gift (yay Free and Open Source Software, or FOSS).
+- **sovereign**: Members of a monastery, ethically barred from using "remote" accounts,
+  run their own e-mail server with a chat-messenger that they accept as a gift (FOSS!).
 
-- **interoperable**: Anyone can chat even if the recipient doesn't have the app —
-  it works with any e-mail address.
+- **interoperable**: You can chat with anyone even if they don't have
+  the app (e-mail!).
 
 ![A variety of Delta Chat logos.](../assets/blog/2022-12-uidevs.jpg)
 
@@ -37,7 +38,7 @@ Luckily we have a wonderful testing community with key contributors
 sorting out issues with users and discussing with developers.
 One from Austria kept reminding us about specific connectivity problems
 even if they rarely occur and are hard to re-produce:
-the issues were fixed this week, which increased resiliency for everyone.
+the issues were fixed the last week, which increased resiliency for everyone.
 Did you know that most Delta Chat features are first tested on a Caribbean island?
 Some were originally developed in the DeltaLab app:
 a friendly fork of Delta Chat Android only available in the Cuban app store.
@@ -64,13 +65,18 @@ Can you guess from which island these developments were inspired and co-driven?
 ### Movements in the woods and underground…
 
 With a wide variety of users, developers, partners, and co-operative projects
-we discuss wants and needs emerging from real-world scenarios, such as
-encryption improvements (making OpenPGP more usable), seamless multi-device setup,
-features from other messengers (emoji reactions, broadcast channels, folding multiple
-groups into communities), and even Peer-to-Peer messaging.
-We progressing on several of these topics and, although we pre-announce as little as possible, this post will be an exception (to prove the rule 🙂).
+we discuss many wants and needs:
+Supporting emoji-reactions, having Telegram-style larger channels,
+evolving WhatsApp-style communities,
+encryption improvements, seamless multi-device setup,
+and even the holy grails of Peer-to-Peer messaging.
+The somewhat incredible thing is that we are actually progressing
+around several of these topics.
+We just don't like to pre-announce much.
+This post here is a bit an exception to prove the rule 🙂
 
 <img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-left:1em;" />
+
 Delta Chat app developments are a usability and UX-driven effort and
 for this we have experienced UX researchers with us.
 Security considerations play a day-to-day role, however, the "most secure protocol"
