--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -124,6 +124,7 @@ not new barriers and walled gardens.
 
 ### Our "Rust-core" architecture and its UI bindings…
 
+<img src="../assets/blog/2020-03-26-bots-2.jpg" width="270" style="float:left; margin-right:1em;" />
 Delta Chat was the first fully Rust-based chat app available
 on all platforms, and may still be the only one.
 Rust is a system-level memory-safe language,
@@ -146,11 +147,6 @@ directly talking to core without a C-layer.
 New asynchronous python bindings doing away with all CFFI were started this week
 with first bots being ported to it.
 
-![A delta mascot sitting below a Delta Chat umbrella, protecting it against
-Apple & Google rain.](../assets/blog/2022-12-gafam-rain.jpg)
-
-### Bots, bots, bots
-
 For mailing-lists, SuperGroups, Mastodon, screenshots, downloading, and other fun experiments,
 bots are being deployed for practical and entertaining contexts.
 But this post is getting long and twisted enough already…
@@ -158,10 +154,12 @@ Let's get to the maybe most important point of this whole post…
 
 ### We are looking for experienced React/Web, Java/Android and Swift/iOS developers
 
+![Desktop background image screenshot](../assets/blog/2020-03-26-bots-2.jpg")
+
 Our Desktop cilent uses Web technology (React, TypeScript), currently via
 Electron, but maybe someday via Tauri so there's no need to ship a full browser with the app.
 The desktop app is regularly released and published
-to Windows, macOS, and Linux distribution channels.
+to Windows, MacOS, and Linux distribution channels.
 There are many things to improve regarding platform integration,
 bug fixing and bringing about new or refined UI/UX interactions.
 
@@ -183,7 +181,7 @@ in Freiburg (black forest), elsewhere in Germany (Berlin, Hamburg, Leipzig…),
 and from time to time in more remote locations like Kyiv or Havanna.
 We typically invite and converse with folks from interesting or befriended projects,
 collocated in decentralization, internet freedom, and queer fusion spaces.
-Several of us avoid flying and some are involved in FFF or adjacent activities.
+Several of us avoid flying and some are involved in Friday-lor-Futures or adjacent activities.
 If we gather somewhere remote then usually for weeks rather than days,
 and without seeking much publicity.
 We try to avoid constant busyness and urgency as it prevents enjoyable collaboration.
@@ -208,5 +206,4 @@ We'll organize an onboarding group for you and guide you through first issues an
 
 Can't consider a job yourself but know someone who might be interested?
 Please forward this post to whatever channels you find appropriate.
-We thought you might appreciate some background context in this longer post.
-Thanks for reading!
+Thanks for reading and helping!
