- shifting a picture - linking the three app repos

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -64,6 +64,7 @@ Can you guess from which island these developments were inspired and co-driven?
 
 ### Movements in the woods and underground…
 
+<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-left:1em;" />
 With a wide variety of users, developers, partners, and co-operative projects
 we discuss many wants and needs:
 Supporting emoji-reactions, having Telegram-style larger channels,
@@ -74,8 +75,6 @@ The somewhat incredible thing is that we are actually progressing
 around several of these topics.
 We just don't like to pre-announce much.
 This post here is a bit an exception to prove the rule 🙂
-
-<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-left:1em;" />
 
 Delta Chat app developments are a usability and UX-driven effort and
 for this we have experienced UX researchers with us.
@@ -156,19 +155,19 @@ Let's get to the maybe most important point of this whole post…
 
 ![Desktop background image screenshot](../assets/blog/2020-03-26-bots-2.jpg")
 
-Our Desktop cilent uses Web technology (React, TypeScript), currently via
+Our [Desktop client](https://github.com/deltachat/deltachat-desktop) uses Web technology (React, TypeScript), currently via
 Electron, but maybe someday via Tauri so there's no need to ship a full browser with the app.
 The desktop app is regularly released and published
 to Windows, MacOS, and Linux distribution channels.
 There are many things to improve regarding platform integration,
 bug fixing and bringing about new or refined UI/UX interactions.
 
-Our Android app is a 2019-fork of Signal's Java app,
+Our [Android app](https://github.com/deltachat/deltachat-android) is a 2019-fork of Signal's Java app,
 diverged in some areas because we orient ourselves
 around the interfaces of Telegram and WhatsApp.
 The Android app remains our "flagship" app that is available in various stores,
 among them Google Play and F-Droid.
-Our iOS app is a self-development using Uikit and Swift bindings to core.
+Our [iOS app](https://github.com/deltachat/deltachat-ios) is a self-development using Uikit and Swift bindings to core.
 It is the youngest sibling in our offerings and also needs more love.
 
 For both Desktop and mobile development we offer 80-120 hours-per-month contracts.
