use "app" instead of "client"

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -155,7 +155,7 @@ Let's get to the maybe most important point of this whole post…
 
 ![Desktop background image screenshot](../assets/blog/2020-03-26-bots-2.jpg")
 
-Our [Desktop client](https://github.com/deltachat/deltachat-desktop) uses Web technology (React, TypeScript), currently via
+Our [Desktop app](https://github.com/deltachat/deltachat-desktop) uses Web technology (React, TypeScript), currently via
 Electron, but maybe someday via Tauri so there's no need to ship a full browser with the app.
 The desktop app is regularly released and published
 to Windows, MacOS, and Linux distribution channels.
