fix desktop image

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -153,8 +153,7 @@ Let's get to the maybe most important point of this whole post…
 
 ### We are looking for experienced React/Web, Java/Android and Swift/iOS developers
 
-![Desktop background image screenshot](../assets/blog/2020-03-26-bots-2.jpg")
-
+![Desktop background image screenshot](../assets/blog/screenshots/2020-01-15-delta-chat-desktop-client-release-background-image.jpg)
 Our [Desktop app](https://github.com/deltachat/deltachat-desktop) uses Web technology (React, TypeScript), currently via
 Electron, but maybe someday via Tauri so there's no need to ship a full browser with the app.
 The desktop app is regularly released and published
