relax a continuation that is now after the picture

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -27,8 +27,8 @@ They're using Delta Chat because it is:
 ### Why don't we promote our project more?
 
 Since the beginnings of Delta Chat in a small city north of Hamburg almost five years ago,
-we have posted little about these wonderful and diverse ways people use the technology.
-We usually prefer to share completed app releases instead of pre-announcing or
+we have posted little about the wonderful and diverse ways people use our apps.
+We usually prefer to share completed releases instead of pre-announcing or
 trying to create hype by boasting about users and growth.
 Avoiding popularity is not merely born out of humility, but also realism as
 we can only address so much feedback and suggestions.
