Move 'indigenous' link
The indigenous communities referenced are not on the linked page, which is more about providing infrastructure.

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -8,8 +8,8 @@ What do indigenous communities in the Amazon rainforest, friends in Cuba, famili
 
 They're using Delta Chat because it is:
 
-- **adaptable**: [Indigenous](https://rhizomatica.org) communities
-  use solar powered routers deep in the rainforest,
+- **adaptable**: Indigenous communities
+  use [solar powered routers deep in the rainforest](https://rhizomatica.org),
   facilitating fast local Wi-Fi chats and
   low-bitrate long-range communication with remote chat addresses.
 
