Re-word promotion
To avoid sounding like 'any more'

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -24,7 +24,7 @@ They're using Delta Chat because it is:
 
 ![A variety of Delta Chat logos.](../assets/blog/2022-12-uidevs.jpg)
 
-### Why don't we promote our project more?
+### Why don't we spend more time on promotion?
 
 Since the beginnings of Delta Chat in a small city north of Hamburg almost five years ago,
 we have posted little about the wonderful and diverse ways people use our apps.
