--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -74,7 +74,7 @@ and even the holy grails of Peer-to-Peer messaging.
 The somewhat incredible thing is that we are actually progressing
 around several of these topics.
 We just don't like to pre-announce much.
-This post here is a bit an exception to prove the rule 🙂
+This post here is a bit an exception to prove the rule 🙂.
 
 Delta Chat app developments are a usability and UX-driven effort and
 for this we have experienced UX researchers with us.
