--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -92,7 +92,7 @@ in part following the often-quoted usable security study ["When Signal hits the 
 Using a pre-existing email account is one of Delta Chat's core features, but also
 happens to be an impediment for many when getting started with Delta Chat.
 Supplying the e-mail address and password is enough for autoconfiguration to
-quickly succeed, but not without problems and although plenty of e-mail providers work
+quickly succeed, but not without problems and, although plenty of e-mail providers work
 with Delta Chat, several have unnecessary limitations and complications.
 Many users do not have a good e-mail address and can not easily get one.
 We are experimenting with a single-click or QR-code based sign-up that
