--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -96,7 +96,7 @@ quickly succeed, but not without problems and, although plenty of e-mail provide
 with Delta Chat, several have unnecessary limitations and complications.
 Many users do not have a good e-mail address and can not easily get one.
 We are experimenting with a single-click or QR-code based sign-up that
-quickly bootstraps a working account configured with Dela Chat.
+quickly bootstraps a working account configured with Delta Chat.
 The latest addition to our group of sysadmins has seup a new server and
 onboarded a couple of friends, now all happily using Delta Chat.
 
