--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -1,5 +1,5 @@
 ---
-title: Want to get money to help improving Delta Chat UI/UX?
+title: Want to get money to help improve Delta Chat UI/UX?
 author: olgax
 image: ../assets/blog/2022-12-uidevs.jpg
 ---
@@ -9,7 +9,7 @@ What do indigenous communities in the Amazon rainforest, friends in Cuba, famili
 They're using Delta Chat because it is:
 
 - **adaptable**: Indigenous communities
-  use [solar powered routers deep in the rainforest](https://rhizomatica.org),
+  use [solar-powered routers deep in the rainforest](https://rhizomatica.org),
   facilitating fast local Wi-Fi chats and
   low-bitrate long-range communication with remote chat addresses.
 
@@ -34,7 +34,7 @@ Avoiding popularity is not merely born out of humility, but also realism as
 we can only address so much feedback and suggestions.
 If we are over capacity, feature requests and ideas turn into pressure and stress.
 
-Luckily we have a wonderful testing community with key contributors
+Luckily, we have a wonderful testing community with key contributors
 sorting out issues with users and discussing with developers.
 One from Austria kept reminding us about specific connectivity problems
 even if they rarely occur and are hard to re-produce:
@@ -74,17 +74,17 @@ and even the holy grails of Peer-to-Peer messaging.
 The somewhat incredible thing is that we are actually progressing
 around several of these topics.
 We just don't like to pre-announce much.
-This post here is a bit an exception to prove the rule 🙂.
+This post here is a bit of an exception to prove the rule 🙂.
 
 Delta Chat app developments are a usability and UX-driven effort and
 for this we have experienced UX researchers with us.
 Security considerations play a day-to-day role, however, the "most secure protocol"
 is useless if few are able to understand or use it.
 "Usable security" itself remains an evasive concept
-if we can not facilitate its implementation in real-life apps.
+if we can't facilitate its implementation in real-life apps.
 Between usability, security, and implementation considerations
 there is no natural hierarchy: each constrains and influences the others.
-In 2023, we want to perform perform systematic user and field testing around security topics,
+In 2023, we want to perform systematic user and field-testing around security topics,
 in part following the often-quoted usable security study ["When Signal hits the fan"](https://dx.doi.org/10.14722/eurousec.2016.23012).
 
 ### Easing onboarding with "Automatic Accounts"
@@ -94,7 +94,7 @@ happens to be an impediment for many when getting started with Delta Chat.
 Supplying the e-mail address and password is enough for autoconfiguration to
 quickly succeed, but not without problems and, although plenty of e-mail providers work
 with Delta Chat, several have unnecessary limitations and complications.
-Many users do not have a good e-mail address and can not easily get one.
+Many users do not have a good e-mail address and can't easily get one.
 We are experimenting with a single-click or QR-code based sign-up that
 quickly bootstraps a working account configured with Delta Chat.
 The latest addition to our group of sysadmins has seup a new server and
@@ -110,8 +110,8 @@ freedom only arises if exit without sanctions is possible (and there is somewher
 When our prospective Automatic Account offering reaches its limits,
 you will need to migrate, and Automatic Accounts have the design goal of making this easy.
 
-Speaking of migrations, we have more followers on the Fediverse than on Twitter.
-More importantly, a lot of interesting conversations are evolving.
+Speaking of migrations, we have more followers on the Fediverse than on Twitter
+and interesting conversations are now evolving.
 Aren't e-mail addresses and fediverse addresses strangely similar?
 Don't ActivityPub and E-Mail protocols share a culture
 of a diverse variety of players and different real-use implementations?
@@ -170,7 +170,7 @@ Our [iOS app](https://github.com/deltachat/deltachat-ios) is a self-development 
 It is the youngest sibling in our offerings and also needs more love.
 
 For both Desktop and mobile development we offer 80-120 hours-per-month contracts.
-Payment is not bad but not Silicon-Valley level either.
+Payment is not bad, but not Silicon-Valley level either.
 Read more about [our funding sources here](https://delta.chat/en/help#how-are-delta-chat-developments-funded).
 We are happy to discuss situational arrangements and adaptations.
 Contributing and collaborating happens remote mostly
@@ -179,12 +179,12 @@ in Freiburg (black forest), elsewhere in Germany (Berlin, Hamburg, Leipzig…),
 and from time to time in more remote locations like Kyiv or Havanna.
 We typically invite and converse with folks from interesting or befriended projects,
 collocated in decentralization, internet freedom, and queer fusion spaces.
-Several of us avoid flying and some are involved in Friday-lor-Futures or adjacent activities.
+Several of us avoid flying, and some are involved in Friday-for-Futures or adjacent activities.
 If we gather somewhere remote then usually for weeks rather than days,
 and without seeking much publicity.
 We try to avoid constant busyness and urgency as it prevents enjoyable collaboration.
 We aim to arrange ourselves [reliably and empathically](community-standards)
-and keep dates and clocktime scheduling to a minimum.
+and keep dates and clock time scheduling to a minimum.
 
 Currently, there are around a dozen weekly committers to our repositories,
 with a bit more than half of them receiving funding
@@ -199,7 +199,7 @@ if you are interested in helping us and our users with beautiful front end devel
 
 Please provide some background on your prior projects.
 A CV is welcome, but not necessary.
-If we determine a base fit we typically arrange a one month paid test period for both sides.
+If we determine a base fit, we typically arrange a one month paid test period for both sides.
 We'll organize an onboarding group for you and guide you through first issues and peoples involved.
 
 Can't consider a job yourself but know someone who might be interested?
