specify experts and fediverse references

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -6,7 +6,7 @@ image: ../assets/blog/2022-12-uidevs.jpg
 
 What do indigenous communities in the Amazon rainforest, friends in Cuba, families in Iran, activists from Russia, a monastery in Cambodia, and many folks in the Fediverse have in common?
 
-They're using Delta Chat because it is:
+You guessed it? They're using Delta Chat because it is:
 
 - **adaptable**: Indigenous communities
   use [solar-powered routers deep in the rainforest](https://rhizomatica.org),
@@ -57,7 +57,8 @@ that runs inside a chat group — makes more sense than you might think.
 Our Poll example app is 6 kilobytes and, as with all chat-shared web apps,
 automatically operates offline-first and end-to-end encrypted
 without any server deployments (and thus without logins or GDPR/consent screens).
-Experts and fediverse friends agree:
+UX and privacy researchers, programmers from diverse projects such as Cryptpad, DAT, IPFS,
+libreoffice and also many folks from the fediverse agree:
 web tech combined with decentralized chat (aka "webxdc") is a rare jewel worth refining.
 Some friends and long-term followers hailed our approach as a "decentralized super-app".
 Can you guess from which island these developments were inspired and co-driven?
