trying to add a video

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -43,11 +43,11 @@ Did you know that most Delta Chat features are first tested on a Caribbean islan
 Some were originally developed in the DeltaLab app:
 a friendly fork of Delta Chat Android only available in the Cuban app store.
 
-### Extending decentralized chat with web apps
+### Sharing web apps in a chat (webxdc)
 
 <img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin-right:1em;" />
-[Apps shared in a Chat](https://webxdc.org) were released in mid-2022.
-Dozens of grassroots-ported games are played daily in chat groups and through mailing lists.
+[Sharing web apps in a chat (webxdc)](https://webxdc.org) was released in mid-2022.
+Dozens of grassroots-ported games are now played daily in chat groups and through mailing lists.
 Collaborative tooling apps (polls, checklists, calendars, editors) are evolving.
 No permission from us, or any app store, is needed to create and distribute your apps.
 Programming newcomers succeeded in delivering working usable apps via a zip file
@@ -65,7 +65,13 @@ Can you guess from which island these developments were inspired and co-driven?
 
 ### Movements in the woods and underground…
 
-<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-left:1em;" />
+<div class="smartphone">
+    <video class="content" autoplay muted loop playsinline>
+        <source src="assets/deltagif.mp4" type="video/mp4">
+        <img class="content" aria-hidden="true" src="assets/screenshots/tower-builder.png">
+    </video>
+</div>
+
 With a wide variety of users, developers, partners, and co-operative projects
 we discuss many wants and needs:
 Supporting emoji-reactions, having Telegram-style larger channels,
@@ -77,6 +83,7 @@ around several of these topics.
 We just don't like to pre-announce much.
 This post here is a bit of an exception to prove the rule 🙂.
 
+<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-left:1em;" />
 Delta Chat app developments are a usability and UX-driven effort and
 for this we have experienced UX researchers with us.
 Security considerations play a day-to-day role, however, the "most secure protocol"
