use a different version of video, fix links

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -65,12 +65,7 @@ Can you guess from which island these developments were inspired and co-driven?
 
 ### Movements in the woods and underground…
 
-<div class="smartphone">
-    <video class="content" autoplay muted loop playsinline>
-        <source src="assets/deltagif.mp4" type="video/mp4">
-        <img class="content" aria-hidden="true" src="assets/screenshots/tower-builder.png">
-    </video>
-</div>
+<video class="content" autoplay muted loop playsinline><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img class="content" aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
 
 With a wide variety of users, developers, partners, and co-operative projects
 we discuss many wants and needs:
