change video style, change title

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -1,5 +1,5 @@
 ---
-title: Want to get money to help improve Delta Chat UI/UX?
+title: Delta Chat backgrounds; want a UI/UX dev job by chance?
 author: olgax
 image: ../assets/blog/2022-12-uidevs.jpg
 ---
@@ -45,15 +45,18 @@ a friendly fork of Delta Chat Android only available in the Cuban app store.
 
 ### Sharing web apps in a chat (webxdc)
 
-<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin-right:1em;" />
+<video style="width:560px; max-width: 100%;" autoplay muted loop playsinline><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
 [Sharing web apps in a chat (webxdc)](https://webxdc.org) was released in mid-2022.
-Dozens of grassroots-ported games are now played daily in chat groups and through mailing lists.
+Dozens of grassroots-ported games are now played everyday in chat groups and through mailing lists.
 Collaborative tooling apps (polls, checklists, calendars, editors) are evolving.
 No permission from us, or any app store, is needed to create and distribute your apps.
 Programming newcomers succeeded in delivering working usable apps via a zip file
 containing an `index.html`, some assets and JS/Typescript/CSS as preferred.
 One of our more experienced and playful developers recently whipped up a chat app
-that runs inside a chat group — makes more sense than you might think.
+that runs inside a chat group —
+makes more sense if you consider the chat web app is distributed in an anonymizing mailing list ;)
+
+<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin-right:1em;" />
 Our Poll example app is 6 kilobytes and, as with all chat-shared web apps,
 automatically operates offline-first and end-to-end encrypted
 without any server deployments (and thus without logins or GDPR/consent screens).
@@ -64,8 +67,6 @@ Some friends and long-term followers hailed our approach as a "decentralized sup
 Can you guess from which island these developments were inspired and co-driven?
 
 ### Movements in the woods and underground…
-
-<video class="content" autoplay muted loop playsinline><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img class="content" aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
 
 With a wide variety of users, developers, partners, and co-operative projects
 we discuss many wants and needs:
