--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -22,10 +22,10 @@ You guessed it? They're using Delta Chat because it is:
 - **interoperable**: You can chat with anyone even if they don't have
   the app (e-mail!).
 
-![A variety of Delta Chat logos.](../assets/blog/2022-12-uidevs.jpg)
 
 ### Why don't we spend more time on promotion?
 
+<img src="../assets/blog/2020-06-faster.jpg" width="270" style="float:left; margin-right:1em;" />
 Since the beginnings of Delta Chat in a small city north of Hamburg almost five years ago,
 we have posted little about the wonderful and diverse ways people use our apps.
 We usually prefer to share completed releases instead of pre-announcing or
@@ -45,7 +45,8 @@ a friendly fork of Delta Chat Android only available in the Cuban app store.
 
 ### Sharing web apps in a chat (webxdc)
 
-<video style="width:560px; max-width: 100%;" autoplay muted loop playsinline><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
+<video autoplay="" muted="" loop="" playsinline="" style="float: right ; width:270px; margin-right: 1em; max-width: 100%;"><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
+<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin-left:1em;" />
 [Sharing web apps in a chat (webxdc)](https://webxdc.org) was released in mid-2022.
 Dozens of grassroots-ported games are now played everyday in chat groups and through mailing lists.
 Collaborative tooling apps (polls, checklists, calendars, editors) are evolving.
@@ -56,7 +57,6 @@ One of our more experienced and playful developers recently whipped up a chat ap
 that runs inside a chat group —
 makes more sense if you consider the chat web app is distributed in an anonymizing mailing list ;)
 
-<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin-right:1em;" />
 Our Poll example app is 6 kilobytes and, as with all chat-shared web apps,
 automatically operates offline-first and end-to-end encrypted
 without any server deployments (and thus without logins or GDPR/consent screens).
@@ -174,7 +174,7 @@ Our [iOS app](https://github.com/deltachat/deltachat-ios) is a self-development 
 It is the youngest sibling in our offerings and also needs more love.
 
 For both Desktop and mobile development we offer 80-120 hours-per-month contracts.
-Payment is not bad, but not Silicon-Valley level either.
+Payment is not bad, but certainly not what some corporate entities pay.
 Read more about [our funding sources here](https://delta.chat/en/help#how-are-delta-chat-developments-funded).
 We are happy to discuss situational arrangements and adaptations.
 Contributing and collaborating happens remote mostly
