--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -45,8 +45,9 @@ a friendly fork of Delta Chat Android only available in the Cuban app store.
 
 ### Sharing web apps in a chat (webxdc)
 
-<video autoplay="" muted="" loop="" playsinline="" style="float: right ; width:270px; margin-right: 1em; max-width: 100%;"><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
-<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:left; margin-left:1em;" />
+<video autoplay="" muted="" loop="" playsinline="" style="float: left ; width:250px; margin-right: 1em; max-width: 100%;"><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
+<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:right; margin-left:1em;" />
+
 [Sharing web apps in a chat (webxdc)](https://webxdc.org) was released in mid-2022.
 Dozens of grassroots-ported games are now played everyday in chat groups and through mailing lists.
 Collaborative tooling apps (polls, checklists, calendars, editors) are evolving.
