link a Xenia talk and TeamUSEC around the UX/research section

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -61,8 +61,8 @@ makes more sense if you consider the chat web app is distributed in an anonymizi
 Our Poll example app is 6 kilobytes and, as with all chat-shared web apps,
 automatically operates offline-first and end-to-end encrypted
 without any server deployments (and thus without logins or GDPR/consent screens).
-UX and privacy researchers, programmers from diverse projects such as Cryptpad, DAT, IPFS,
-libreoffice and also many folks from the fediverse agree:
+UX and privacy researchers and befriended hackers from diverse projects such as Cryptpad, DAT, IPFS,
+libreoffice agree:
 web tech combined with decentralized chat (aka "webxdc") is a rare jewel worth refining.
 Some friends and long-term followers hailed our approach as a "decentralized super-app".
 Can you guess from which island these developments were inspired and co-driven?
@@ -82,14 +82,15 @@ This post here is a bit of an exception to prove the rule 🙂.
 
 <img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-left:1em;" />
 Delta Chat app developments are a usability and UX-driven effort and
-for this we have experienced UX researchers with us.
+for this we have [experienced UX and user researchers with us](https://media.ccc.de/v/35c3-9864-a_routing_interregnum_internet_infrastructure_transition_in_crimea_after_russian_annexation).
 Security considerations play a day-to-day role, however, the "most secure protocol"
 is useless if few are able to understand or use it.
 "Usable security" itself remains an evasive concept
 if we can't facilitate its implementation in real-life apps.
 Between usability, security, and implementation considerations
 there is no natural hierarchy: each constrains and influences the others.
-In 2023, we want to perform systematic user and field-testing around security topics,
+In 2023, in collaboration with [TeamUSEC](https://teamusec.de/) we want
+to perform systematic user and field-testing around security topics,
 in part following the often-quoted usable security study ["When Signal hits the fan"](https://dx.doi.org/10.14722/eurousec.2016.23012).
 
 ### Easing onboarding with "Automatic Accounts"
