some more shuffling of images

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -45,8 +45,7 @@ a friendly fork of Delta Chat Android only available in the Cuban app store.
 
 ### Sharing web apps in a chat (webxdc)
 
-<video autoplay="" muted="" loop="" playsinline="" style="float: left ; width:250px; margin-right: 1em; max-width: 100%;"><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
-<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:right; margin-left:1em;" />
+<video autoplay="" muted="" loop="" playsinline="" style="float: right ; width:250px; margin-left: 1em; max-width: 100%;"><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
 
 [Sharing web apps in a chat (webxdc)](https://webxdc.org) was released in mid-2022.
 Dozens of grassroots-ported games are now played everyday in chat groups and through mailing lists.
@@ -69,6 +68,7 @@ Can you guess from which island these developments were inspired and co-driven?
 
 ### Movements in the woods and underground…
 
+<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-left:1em;" />
 With a wide variety of users, developers, partners, and co-operative projects
 we discuss many wants and needs:
 Supporting emoji-reactions, having Telegram-style larger channels,
@@ -80,7 +80,6 @@ around several of these topics.
 We just don't like to pre-announce much.
 This post here is a bit of an exception to prove the rule 🙂.
 
-<img src="../assets/blog/2022-12-stickers-and-beer.jpg" width="270" style="float:right; margin-left:1em;" />
 Delta Chat app developments are a usability and UX-driven effort and
 for this we have [experienced UX and user researchers with us](https://media.ccc.de/v/35c3-9864-a_routing_interregnum_internet_infrastructure_transition_in_crimea_after_russian_annexation).
 Security considerations play a day-to-day role, however, the "most secure protocol"
@@ -105,8 +104,6 @@ We are experimenting with a single-click or QR-code based sign-up that
 quickly bootstraps a working account configured with Delta Chat.
 The latest addition to our group of sysadmins has seup a new server and
 onboarded a couple of friends, now all happily using Delta Chat.
-
-![Some Delta Chat testers sitting on the ground](../assets/blog/2022-12-ux-studies.jpg)
 
 We have two concurrent efforts to provide what we call Automatic Accounts:
 Any Delta Chat user on any platform could choose to get a single-click account
@@ -185,6 +182,9 @@ in Freiburg (black forest), elsewhere in Germany (Berlin, Hamburg, Leipzig…),
 and from time to time in more remote locations like Kyiv or Havanna.
 We typically invite and converse with folks from interesting or befriended projects,
 collocated in decentralization, internet freedom, and queer fusion spaces.
+
+![Some Delta Chat testers sitting on the ground](../assets/blog/2022-12-ux-studies.jpg)
+
 Several of us avoid flying, and some are involved in Friday-for-Futures or adjacent activities.
 If we gather somewhere remote then usually for weeks rather than days,
 and without seeking much publicity.
