--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -25,7 +25,7 @@ You guessed it? They're using Delta Chat because it is:
 
 ### Why don't we spend more time on promotion?
 
-<img src="../assets/blog/2020-06-faster.jpg" width="270" style="float:left; margin-right:1em;" />
+<img src="../assets/blog/2020-06-faster.jpg" width="270" style="float:right; margin-left:1em;" />
 Since the beginnings of Delta Chat in a small city north of Hamburg almost five years ago,
 we have posted little about the wonderful and diverse ways people use our apps.
 We usually prefer to share completed releases instead of pre-announcing or
@@ -45,8 +45,7 @@ a friendly fork of Delta Chat Android only available in the Cuban app store.
 
 ### Sharing web apps in a chat (webxdc)
 
-<video autoplay="" muted="" loop="" playsinline="" style="float: right ; width:250px; margin-left: 1em; max-width: 100%;"><source src="https://webxdc.org/assets/deltagif.mp4" type="video/mp4"><img aria-hidden="true" src="https://webxdc.org/assets/screenshots/tower-builder.png"></video>
-
+<img src="../assets/blog/2022-12-webxdc-poll.jpg" width="270" style="float:right; margin-left:1em;" />
 [Sharing web apps in a chat (webxdc)](https://webxdc.org) was released in mid-2022.
 Dozens of grassroots-ported games are now played everyday in chat groups and through mailing lists.
 Collaborative tooling apps (polls, checklists, calendars, editors) are evolving.
@@ -61,7 +60,7 @@ Our Poll example app is 6 kilobytes and, as with all chat-shared web apps,
 automatically operates offline-first and end-to-end encrypted
 without any server deployments (and thus without logins or GDPR/consent screens).
 UX and privacy researchers and befriended hackers from diverse projects such as Cryptpad, DAT, IPFS,
-libreoffice agree:
+Peermaps and Libreoffice agree:
 web tech combined with decentralized chat (aka "webxdc") is a rare jewel worth refining.
 Some friends and long-term followers hailed our approach as a "decentralized super-app".
 Can you guess from which island these developments were inspired and co-driven?
@@ -105,6 +104,8 @@ quickly bootstraps a working account configured with Delta Chat.
 The latest addition to our group of sysadmins has seup a new server and
 onboarded a couple of friends, now all happily using Delta Chat.
 
+![Some Delta Chat testers sitting on the ground](../assets/blog/2022-12-ux-studies.jpg)
+
 We have two concurrent efforts to provide what we call Automatic Accounts:
 Any Delta Chat user on any platform could choose to get a single-click account
 with an optimized baseline chat experience.
@@ -126,7 +127,6 @@ not new barriers and walled gardens.
 
 ### Our "Rust-core" architecture and its UI bindings…
 
-<img src="../assets/blog/2020-03-26-bots-2.jpg" width="270" style="float:left; margin-right:1em;" />
 Delta Chat was the first fully Rust-based chat app available
 on all platforms, and may still be the only one.
 Rust is a system-level memory-safe language,
@@ -149,6 +149,7 @@ directly talking to core without a C-layer.
 New asynchronous python bindings doing away with all CFFI were started this week
 with first bots being ported to it.
 
+<img src="../assets/blog/2020-03-26-bots-2.jpg" width="270" style="float:right; margin-left:1em;" />
 For mailing-lists, SuperGroups, Mastodon, screenshots, downloading, and other fun experiments,
 bots are being deployed for practical and entertaining contexts.
 But this post is getting long and twisted enough already…
@@ -182,8 +183,7 @@ in Freiburg (black forest), elsewhere in Germany (Berlin, Hamburg, Leipzig…),
 and from time to time in more remote locations like Kyiv or Havanna.
 We typically invite and converse with folks from interesting or befriended projects,
 collocated in decentralization, internet freedom, and queer fusion spaces.
-
-![Some Delta Chat testers sitting on the ground](../assets/blog/2022-12-ux-studies.jpg)
+![Delta XYIV painted logo](../assets/blog/screenshots/xyiv.png)
 
 Several of us avoid flying, and some are involved in Friday-for-Futures or adjacent activities.
 If we gather somewhere remote then usually for weeks rather than days,
