better to link the UX report than the crimea talk

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -80,16 +80,16 @@ We just don't like to pre-announce much.
 This post here is a bit of an exception to prove the rule 🙂.
 
 Delta Chat app developments are a usability and UX-driven effort and
-for this we have [experienced UX and user researchers with us](https://media.ccc.de/v/35c3-9864-a_routing_interregnum_internet_infrastructure_transition_in_crimea_after_russian_annexation).
-Security considerations play a day-to-day role, however, the "most secure protocol"
-is useless if few are able to understand or use it.
+we have [experienced UX and user researchers with us](https://delta.chat/en/2020-08-01-ux-final).
+Security considerations play a day-to-day role.
+However, the "most secure protocol" is useless if few are able to understand or use it.
 "Usable security" itself remains an evasive concept
 if we can't facilitate its implementation in real-life apps.
 Between usability, security, and implementation considerations
 there is no natural hierarchy: each constrains and influences the others.
 In 2023, in collaboration with [TeamUSEC](https://teamusec.de/) we want
 to perform systematic user and field-testing around security topics,
-in part following the often-quoted usable security study ["When Signal hits the fan"](https://dx.doi.org/10.14722/eurousec.2016.23012).
+in part following up on the often-quoted usable security study ["When Signal hits the fan"](https://dx.doi.org/10.14722/eurousec.2016.23012).
 
 ### Easing onboarding with "Automatic Accounts"
 
