expand why chat web app makes sense ...

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -54,7 +54,9 @@ Programming newcomers succeeded in delivering working usable apps via a zip file
 containing an `index.html`, some assets and JS/Typescript/CSS as preferred.
 One of our more experienced and playful developers recently whipped up a chat app
 that runs inside a chat group —
-makes more sense if you consider the chat web app is distributed in an anonymizing mailing list ;)
+makes more sense if you consider a chat web app
+running on top of an anonymizing mailing list:
+suddenly people could do e2e-encrypted private communications on top 🤯
 
 Our Poll example app is 6 kilobytes and, as with all chat-shared web apps,
 automatically operates offline-first and end-to-end encrypted
